test/tests/compiler/8_loops/valid/plx1_kw1_in_names.plx
pub fn main(none) i32 {
    loop1: i32 = 1
    while1: i32 = 2
    break1: i32 = 3
    continue1: i32 = 4
    
    return (loop1 + while1 + break1 + continue1) - 10
}
