test/tests/compiler/8_loops/invalid_parse/extra_credit/switch_no_condition.plx
pub fn main(none) i32 {
    match {
        return 0
    }
}
